--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "^4.6.0",
+    "@prisma/client": "^4.6.1",
     "@remix-run/express": "^1.7.5",
     "@remix-run/node": "^1.7.5",
     "@remix-run/react": "^1.7.5",
@@ -47,8 +47,8 @@
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
-    "isbot": "^3.6.3",
-    "jotai": "^1.9.1",
+    "isbot": "^3.6.5",
+    "jotai": "^1.9.2",
     "morgan": "^1.10.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
@@ -94,14 +94,15 @@
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.6.0",
-    "tailwindcss": "^3.2.2",
+    "prisma": "^4.6.1",
+    "tailwindcss": "^3.2.3",
     "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
   },
   "resolutions": {
-    "**remix-run/**/unset-value": "2.0.1"
+    "**remix-run/**/unset-value": "2.0.1",
+    "**remix-run/dev/xdm/loader-utils": "^2.0.3"
   }
 }
